fix: Torna o fundo da tela de login transparente

--- a/style.css
+++ b/style.css
@@ -147,6 +147,10 @@ body {
 }
 
 /* Tela de Login */
+#login-screen {
+    background: transparent;
+}
+
 #auth-buttons-container {
     display: flex;
     flex-direction: column;
